<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distancia">Distância</string>
    <string name="distancia_percorrida">Distância Percorrida</string>
    <string name="preco">Preço</string>
    <string name="preco_litro">Preço por Litro</string>
    <string name="autonomia">KMs por Litro</string>
    <string name="autonomia_litro">KMs por Litro</string>
    <string name="gasto_total">Seu Gasto Total Será de:</string>
    <string name="rs">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="sucess">Sucesso</string>
    <string name="validation_fields">Informe os dados corretamente</string>



</resources>